<resources>
    <string name="app_name">My Docs Box</string>
    <string name="app_icon">App Icon</string>
    <string name="action_search">Search</string>
    <string name="action_archive">Archive</string>
    <string name="action_settings">Settings</string>
    <string name="doc_image">Image</string>
    <string name="doc_title">Title</string>
    <string name="doc_desc">Description &amp; Details</string>
    <string name="doc_tags">Tags</string>
    <string name="doc_create_ts">Creation Date</string>
    <string name="doc_update_ts">Last Update</string>
    <string name="action_settings_save">Save</string>
    <string name="settings_hide">Hide</string>
    <string name="settings_show">Show</string>
    <string name="set_gen_lang_value">English</string>
    <string name="btn_change">Change</string>
    <string name="no_image">No Image</string>
    <string name="doc_book">Book</string>
    <string name="add_doc">Add</string>
    <string name="activity_details">Doc Details</string>
    <string name="add_title_hint">Type brief title</string>
    <string name="add_desc_hint">Type all the details</string>
    <string name="add_tags_hint">Type new tag here</string>
    <string name="add_book_hint">Type book title here</string>
    <string name="activity_profile">Profile</string>
    <string name="add_clear">Clear All</string>
    <string name="activity_add">Add New Doc</string>
    <string name="select_book">Please select a Book</string>
    <string name="select_tag">Please select at least one Tag or add new one</string>
    <string name="valid_msg"><![CDATA[Please enter a valid Title & Description]]></string>
    <string name="valid_tag">Please enter valid Tag name</string>
    <string name="valid_book">Please enter a valid Book title</string>
    <string name="add_tag_book">Add</string>
    <string name="set_manage">Manage</string>
    <string name="set_mng_books_key">Books</string>
    <string name="set_mng_tags_key">Tags</string>
    <string name="set_mng_books_value">You have n books</string>
    <string name="set_mng_tags_value">You have n tags</string>
    <string name="set_gen_lang_key">Language</string>
    <string name="set_gen_date_key">Date Format</string>
    <string name="set_gen_date_value">dd-MMM-yyyy, HH:mm:ss</string>
    <string name="set_apr_view_key">View Mode</string>
    <string name="view_mode_compact">Compact</string>
    <string name="view_mode_informative">Informative</string>
    <string name="set_apr_theme_key">Theme</string>
    <string name="set_apr_font_key">Font</string>
    <string name="set_apr_theme_value">Light</string>
    <string name="set_apr_font_value">System</string>
    <string name="set_db_backup">Backup</string>
    <string name="set_db_restore">Restore</string>
    <string name="set_db_auto_backup_key">Auto Backup</string>
    <string name="set_db_auto_backup_value">Last backup: never</string>
    <string name="set_appearance">Appearance</string>
    <string name="set_general">General</string>
    <string name="set_database">Database</string>
    <string name="set_contact">Contact</string>
    <string name="set_cont_feedback">Feedback</string>
    <string name="set_cont_bug">Report a bug</string>
    <string name="about_app">About App</string>
    <string name="ammar_yasser">Ammar Yasser</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="bs_preview">Preview</string>
    <string name="bs_update">Update</string>
    <string name="bs_copy">Copy</string>
    <string name="bs_share">Share</string>
    <string name="bs_archive">@string/action_archive</string>
    <string name="bs_delete">Delete</string>
</resources>
