<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/doc_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/doc_image"
        android:src="@drawable/sketch_book" />

    <TextView
        android:id="@+id/doc_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/doc_image"
        android:gravity="center_vertical"
        android:text="@string/doc_title"
        android:textColor="@color/iconDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/doc_desc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/doc_title"
        android:layout_toEndOf="@id/doc_image"
        android:gravity="center_vertical"
        android:text="@string/doc_desc" />

</RelativeLayout>